--- a/main-base/index.html
+++ b/main-base/index.html
@@ -2,14 +2,55 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mackenzie</title>
+    <title>Communication Now - Login</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" type="image/x-icon" href="/main-base/img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="row px-3">
+            <div class="col-lg-10 col-xl-9 card flex-row mx-auto px-0">
+                <div class="img-left d-none d-md-flex"></div>
+                <div class="card-body">
+                    <h4 class="title text-center mt-4">
+                        Acesse sua conta
+                    </h4>
+                    <form class="form-box px-3">
+                        <div class="form-input">
+                            <span><em class="fa fa-envelope-o"></em></span>
+                            <input type="email" name="" placeholder="E-mail" tabindex="10" required>
+                        </div>
+                        <div class="form-input">
+                            <span><em class="fa fa-key"></em></span>
+                            <input type="password" name="" placeholder="Senha" required>
+                        </div>
+                        <div class="mb-3">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="cb1" name="">
+                                <label class="custom-control-label" for="cb1">Lembre-me</label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <button type="submit" class="btn btn-block text-uppercase">Login</button>
+                        </div>
+                        <div class="text-right">
+                            <a href="#" class="forget-link">Esqueceu sua senha?</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
